Add new fraud detection statistics to index.html
Added new fraud detection and prevention statistics to the dashboard.

--- a/index.html
+++ b/index.html
@@ -676,8 +676,11 @@
 <div class="stat-card"><div class="stat-icon">🪪</div><h3>KYC Workflow Optimization</h3><p>Resolved a 14% verification‑failure spike through improved document checks & reviewer guidelines.</p></div>
 <div class="stat-card"><div class="stat-icon">💳</div><h3>Chargeback & Refund Loop Exploit</h3><p>Shut down a loophole where bad actors cycled refund + chargeback claims, saving $300K monthly exposure.</p></div>
 <div class="stat-card"><div class="stat-icon">🔐</div><h3>ATO Early‑Warning Indicators</h3><p>Identified early ATO signals like impossible‑location login patterns, improving prevention by 42%.</p></div>
+<div class="stat-card"><div class="stat-icon">📦</div><h3>Marketplace Inventory Misrepresentation Scheme</h3><p>Uncovered sellers advertising high-value electronics with falsified stock levels and mismatched shipment timelines. Prevented over ₹48,00,000 in potential losses by identifying SKU anomalies and repeat complaint clusters.</p></div>
+<div class="stat-card"><div class="stat-icon">🧭</div><h3>Phishing-Induced Credential Compromise Pattern</h3><p>Detected a coordinated phishing pattern affecting new marketplace users. Identified unusual login velocity and reset behavior, enabling early containment of 140+ compromised accounts before fraud execution.</p></div>
 </div>
 </section>
+
 
         
         
