Add new metrics for case resolution statistics

--- a/index.html
+++ b/index.html
@@ -659,6 +659,15 @@
 <div class="stat-icon">⚡</div>
 <div class="stat-number">30%</div>
 <div class="stat-label">Faster Case Resolution</div>
+        <div class="metric-tile">
+<div class="metric-number">31%</div>
+<div class="metric-caption">Fraud Case Resolution Time</div>
+</div>
+<!-- New Metric 9 -->
+<div class="metric-tile">
+<div class="metric-number">19%</div>
+<div class="metric-caption">Analyst Accuracy Improvement</div>
+</div>
 </div>
 </div>
 </section>
